--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,9 +8,45 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
+    <Button
+        android:id="@+id/exercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Quantum Tigers" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="24dp"
+        android:text="Exercise" 
+        android:onClick="gotoExercise" />
+
+    <Button
+        android:id="@+id/goals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/exercise"
+        android:layout_alignBottom="@+id/exercise"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="36dp"
+        android:text="Goals" 
+        android:onClick="gotoGoals"/>
+
+    <Button
+        android:id="@+id/schedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/exercise"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="62dp"
+        android:text="Schedule" 
+        android:onClick="gotoSchedule"/>
+
+    <Button
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/schedule"
+        android:layout_alignRight="@+id/goals"
+        android:text="Settings" 
+        android:onClick="gotoSettings"/>
 
 </RelativeLayout>
