--- a/res/layout/activity_review_workout.xml
+++ b/res/layout/activity_review_workout.xml
@@ -6,24 +6,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ExerciseActivity" >
-
-    <TextView
-        android:id="@+id/review_workout_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textColor="#33B5E5"
-        android:textSize="40sp"
-   />
+>
  
     <ListView
         android:id="@+id/review_workout_exercise_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/exerciseButton"
-        android:layout_below="@id/active_list_title"
         android:layout_margin="10dip"
         android:divider="@android:color/transparent"
         android:dividerHeight="15.0sp" />
+
+    <TextView
+        android:id="@+id/review_workout_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/review_workout_title"
+        android:layout_centerHorizontal="true"
+        android:textColor="#33B5E5"
+        android:textSize="20sp"/>
+
 </RelativeLayout>
