--- a/res/layout/activity_create_exercise.xml
+++ b/res/layout/activity_create_exercise.xml
@@ -14,20 +14,22 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
+        android:maxLength="20"
+        android:inputType="textCapSentences"
         android:ems="10"
         android:hint="Exercise Name" >
 
         <requestFocus />
     </EditText>
 
-    <EditText
+    <Spinner
         android:id="@+id/createTypeField"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/createNameField"
         android:layout_below="@+id/createNameField"
-        android:ems="10"
-        android:hint="Type" />
+        android:entries="@array/exercise_types"
+        android:prompt="@string/exercise_type" />
 
     <Button
         android:id="@+id/createButton"
