--- a/res/layout/workout_list_row_layout.xml
+++ b/res/layout/workout_list_row_layout.xml
@@ -18,7 +18,7 @@
         android:typeface="sans" />
 
 	<Button
-	    android:id="@+id/deleteExerciseButton"
+	    android:id="@+id/deleteWorkoutButton"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentRight="true"
