--- a/res/layout/activity_create_exercise.xml
+++ b/res/layout/activity_create_exercise.xml
@@ -2,43 +2,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CreateExerciseActivity" >
 
-    <EditText
-        android:id="@+id/createNameField"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:maxLength="20"
-        android:inputType="textCapSentences"
-        android:ems="10"
-        android:hint="Exercise Name" >
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="#D9ffffff"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+    	android:paddingLeft="@dimen/activity_horizontal_margin"
+    	android:paddingRight="@dimen/activity_horizontal_margin"
+    	android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical" >
 
-        <requestFocus />
-    </EditText>
+        <EditText
+            android:id="@+id/createNameField"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:ems="20"
+            android:hint="Exercise Name"
+            android:inputType="textCapSentences"
+            android:maxLength="20" />
 
-    <Spinner
-        android:id="@+id/createTypeField"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/createNameField"
-        android:layout_below="@+id/createNameField"
-        android:entries="@array/exercise_types"
-        android:prompt="@string/exercise_type" />
+        <Spinner
+            android:id="@+id/createTypeField"
+           	android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/exercise_types"
+            android:prompt="@string/exercise_type"
+            />
 
-    <Button
-        android:id="@+id/createButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/createTypeField"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:onClick="createExercise"
-        android:text="Create" />
+        <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+            
+		        <Button
+		            android:id="@+id/createButton"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_centerHorizontal="true"
+		            android:layout_marginTop="19dp"
+		            android:background="#389335"
+		            android:onClick="createExercise"
+		            android:text="Create" />       
+        
+        </RelativeLayout>
+
+ 
+        
+    </LinearLayout>
 
 </RelativeLayout>
