--- a/res/layout/activity_create_workout.xml
+++ b/res/layout/activity_create_workout.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/main_background"
     tools:context=".ExerciseActivity" >
 
     <TextView
@@ -13,10 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:inputType="textCapSentences"
         android:text="Create Workout"
-        android:textColor="#33B5E5"
-        android:textSize="20sp"
+        android:textColor="#ffffff"
+        android:textSize="40sp"
    	/>
     
     <ListView
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:background="#389335"
         android:text="Add Workout" 
         android:onClick="createWorkout"/>
 
@@ -44,7 +45,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/workout_create_list_title"
         android:layout_centerHorizontal="true"
-        android:ems="10"
+        android:ems="35"
+        android:maxLength="20"
+        android:inputType="textCapSentences"
+        android:background="#D9FFFFFF"
         android:hint="Workout Name" />
    
 </RelativeLayout>
