--- a/res/layout/activity_exercise.xml
+++ b/res/layout/activity_exercise.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/main_background"
     tools:context=".ExerciseActivity" >
 
     <TextView
@@ -14,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Exercises"
-        android:textColor="#33B5E5"
+        android:textColor="#ffffff"
         android:textSize="40sp"
    />
  
@@ -35,6 +36,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="Add Exercise" 
-        android:onClick="gotoCreateExercise"/>
+        android:onClick="gotoCreateExercise"
+        android:background="#389335"/>
 
 </RelativeLayout>
