--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,61 +2,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
+        
 
-    <Button
-        android:id="@+id/exercise"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="24dp"
-        android:text="Exercise" 
-        android:onClick="gotoExercise" />
-
-    <Button
-        android:id="@+id/goals"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/exercise"
-        android:layout_alignBottom="@+id/exercise"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="36dp"
-        android:text="Goals" 
-        android:onClick="gotoGoals"/>
-
-    <Button
-        android:id="@+id/schedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/exercise"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="62dp"
-        android:text="Schedule" 
-        android:onClick="gotoSchedule"/>
-
-    <Button
-        android:id="@+id/settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/schedule"
-        android:layout_alignRight="@+id/goals"
-        android:text="Settings" 
-        android:onClick="gotoSettings"/>
-
-    <Button
+    <ImageButton
         android:id="@+id/workout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/exercise"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="91dp"
-        android:text="Workouts"
-        android:onClick="gotoWorkout" />
+        android:layout_centerVertical="true"
+        android:background="@null"
+        android:contentDescription="Workout"
+        android:onClick="gotoWorkout"
+        android:src="@drawable/workout_icon" />
+
+    <ImageButton
+        android:id="@+id/goals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@null"
+        android:contentDescription="Goals"
+        android:onClick="gotoStats"
+        android:src="@drawable/goals_icon" />
+
+    <ImageButton
+        android:id="@+id/exercise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@null"
+        android:contentDescription="Exercise"
+        android:onClick="gotoExercise"
+        android:src="@drawable/exercise_icon" />
 
 </RelativeLayout>
