--- a/res/layout/activity_review_workout.xml
+++ b/res/layout/activity_review_workout.xml
@@ -2,16 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/main_background"
 >
- 
+
     <ListView
         android:id="@+id/review_workout_exercise_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_below="@+id/review_workout_title"
         android:layout_margin="10dip"
         android:divider="@android:color/transparent"
         android:dividerHeight="15.0sp" />
@@ -22,7 +22,28 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/review_workout_title"
         android:layout_centerHorizontal="true"
-        android:textColor="#33B5E5"
-        android:textSize="20sp"/>
+        android:textColor="#FFFFFF"
+        android:textSize="40sp" 
+        android:text=""/>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="Play" 
+        android:onClick="doWorkout"
+        android:background="#389335"
+    />
+
+    <Chronometer
+        android:id="@+id/chronometer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/review_workout_exercise_list"
+        android:layout_alignTop="@+id/review_workout_title"
+        android:text="Chronometer"
+        android:textColor="#ffffff" />
 
 </RelativeLayout>
