--- a/res/layout/activity_stats.xml
+++ b/res/layout/activity_stats.xml
@@ -6,12 +6,20 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".StatsActivity" 
     android:background="@drawable/main_background"
-    tools:context=".ScheduleActivity" >
+    >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="schedule activity" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="Stats"
+        android:textAppearance="?android:attr/textAppearanceLarge" 
+        android:textColor="#ffffff"/>
+
+
 
 </RelativeLayout>
