--- a/res/layout/exercise_check_list_row_layout.xml
+++ b/res/layout/exercise_check_list_row_layout.xml
@@ -4,25 +4,36 @@
     android:layout_height="wrap_content"
    	android:layout_marginBottom="20dip"
    	android:padding="10dip"
+   	android:background="#D9FFFFFF"
     >    
     
-    <CheckedTextView
-        android:id="@+id/workoutExerciseNameCol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:typeface="sans" />
-    	
-	<TextView
-        android:id="@+id/typeCol"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/workoutExerciseNameCol"
-        android:text=""
-        android:textColor="#343434"
-        android:textSize="20sp" />
+   	<ImageView
+	    android:id="@+id/exerciseIcon"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignLeft="@+id/idCol"
+	    android:layout_alignTop="@+id/idCol"
+	    android:src="@drawable/strength_icon" />
 
+	<TextView
+	    android:id="@+id/typeCol"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignBottom="@+id/exerciseIcon"
+	    android:layout_alignLeft="@+id/workoutExerciseNameCol"
+	    android:text=""
+	    android:textSize="20sp" />
+
+	<CheckedTextView
+	    android:id="@+id/workoutExerciseNameCol"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignTop="@+id/exerciseIcon"
+	    android:layout_marginLeft="17dp"
+	    android:layout_toRightOf="@+id/exerciseIcon"
+	    android:text=""
+	    android:textSize="25sp"
+	    android:textStyle="bold"
+	    android:typeface="sans" />
 
 </RelativeLayout>
