--- a/res/layout/exercise_list_row_layout.xml
+++ b/res/layout/exercise_list_row_layout.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
    	android:layout_marginBottom="20dip"
    	android:padding="10dip"
+   	android:background="#D9FFFFFF"
     >
 
     <TextView
@@ -13,34 +14,47 @@
         android:text=""
         android:textSize="25sp"
         android:textStyle="bold"
-        android:typeface="sans" />     
+        android:typeface="sans" />	
     
-    <TextView
-        android:id="@+id/nameCol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/idCol"
-        android:text=""
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:typeface="sans" /> 
-    	
 	<TextView
-        android:id="@+id/typeCol"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nameCol"
-        android:text=""
-        android:textColor="#343434"
-        android:textSize="20sp" />
+	    android:id="@+id/typeCol"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_alignLeft="@+id/nameCol"
+	    android:layout_below="@id/nameCol"
+	    android:text="Type"
+	    android:textColor="#343434"
+	    android:textSize="20sp" />
 
-	<Button
+	<ImageButton
 	    android:id="@+id/deleteExerciseButton"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_alignBottom="@+id/nameCol"
-	    android:layout_alignRight="@+id/typeCol"
-	    android:text="Delete" 
-	    android:onClick="deleteExercise"/>
+	    android:layout_alignParentRight="true"
+	    android:layout_alignParentTop="true"
+	    android:background="@null"
+	    android:contentDescription="Delete"
+	    android:onClick="deleteExercise"
+	    android:src="@drawable/delete_icon" />
+
+	<ImageView
+	    android:id="@+id/exerciseIcon"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignLeft="@+id/idCol"
+	    android:layout_alignTop="@+id/idCol"
+	    android:src="@drawable/strength_icon" />
+
+	<TextView
+	    android:id="@+id/nameCol"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignBottom="@+id/deleteExerciseButton"
+	    android:layout_toRightOf="@+id/exerciseIcon"
+	    android:text="Name"
+	    android:textColor="#000000"
+	    android:textSize="25sp"
+	    android:textStyle="bold"
+	    android:typeface="sans" />
 	
 </RelativeLayout>
