--- a/res/layout/workout_list_row_layout.xml
+++ b/res/layout/workout_list_row_layout.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
    	android:layout_marginBottom="20dip"
    	android:padding="10dip"
+   	android:background="#D9FFFFFF"
     >    
     
     <TextView
@@ -15,16 +16,18 @@
         android:text=""
         android:textSize="25sp"
         android:textStyle="bold"
+        android:textColor="#000000"
         android:typeface="sans" />
 
-	<Button
+	<ImageButton
 	    android:id="@+id/deleteWorkoutButton"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentRight="true"
-	    android:layout_alignTop="@+id/workoutNameCol"
-	    android:layout_marginRight="24dp"
+	    android:layout_alignParentTop="true"
+	    android:background="@null"
+	    android:contentDescription="Delete"
 	    android:onClick="deleteWorkout"
-	    android:text="Delete" />
+	    android:src="@drawable/delete_icon" />
 	
 </RelativeLayout>
