--- a/res/layout/activity_review_workout.xml
+++ b/res/layout/activity_review_workout.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:text="Play" 
+        android:text="Start Workout" 
         android:onClick="doWorkout"
         android:background="#389335"
     />
