--- a/res/layout/activity_main_stats.xml
+++ b/res/layout/activity_main_stats.xml
@@ -6,37 +6,31 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainStatsActivity" 
     android:background="@drawable/main_background"
-    tools:context=".WorkoutActivity" >
+    >
 
     <TextView
-        android:id="@+id/active_list_title"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Workouts"
-        android:textColor="#FFFFFF"
-        android:textSize="40sp"
-   />
- 
-    <ListView
-        android:id="@+id/custom_workout_list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/workoutButton"
-        android:layout_below="@id/active_list_title"
-        android:layout_margin="10dip"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="15.0sp" />
+        android:text="Select an Item to Review Statistics"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        android:id="@+id/workoutButton"
+    <ListView
+        android:id="@+id/custom_exercise_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="#389335"
-        android:onClick="gotoCreateWorkout"
-        android:text="Add Workout" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textView1"
+        android:layout_margin="10dip"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="15.0sp" >
 
+    </ListView>
+    
 </RelativeLayout>
